[project]
name = "sonification"
version = "0.1.0"
description = "Data sonification layer for the GenesisAeon stack – entropy waves to sine tones, UTAC thresholds to pitches, mandala resonance to rhythms."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "GenesisAeon Team", email = "team@genesisaeon.org" }]
requires-python = ">=3.11"
keywords = ["sonification", "audio", "entropy", "midi", "genesisaeon", "data-to-sound"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.8.0",
    "midiutil>=1.2.1",
    "rich>=13.0.0",
    "typer>=0.15.0",
]

[project.optional-dependencies]
stack = [
    "mandala-visualizer>=0.1.0",
    "utac-core>=0.1.0",
    "sigillin>=0.1.0",
    "fieldtheory>=0.1.0",
    "cosmic-moment>=0.1.0",
    "medium-modulation>=0.1.0",
    "entropy-governance>=0.1.0",
    "entropy-table>=1.0.1",
    "implosive-genesis>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.9.0",
    "pre-commit>=3.7.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.27.0",
]

[project.scripts]
soni = "sonification.cli:app"

[project.urls]
Repository = "https://github.com/GenesisAeon/sonification"
Issues = "https://github.com/GenesisAeon/sonification/issues"
Documentation = "https://genesisaeon.github.io/sonification"
DOI = "https://doi.org/10.5281/zenodo.19086583"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sonification"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008"]  # typer uses function calls in defaults

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # allow assert in tests

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=sonification --cov-report=term-missing -v"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]

